4Geeks HTML5 basics

--- a/exercises/09-formating-Text/index.html
+++ b/exercises/09-formating-Text/index.html
@@ -12,5 +12,26 @@
 	</head>
 	<body>
 		<!-- your code here -->
+		<h1><strong>This will be your heading</strong></h1>
+
+		<p>
+			Then, you start talking about some interesting stuff that nobody wants to read <br />
+			Then you can quote someone to add credibility: <br />
+		</p>
+		<blockquote>
+			A quotation is a hanfy thing to have about, saving one the trouble <br />
+			of thinking for oneself, always a laborious business <br />
+
+			- A.A. Milne, If I May
+		</blockquote>
+		<p>
+			Finally you can have some bullets to summarize everything, after all, new <br />
+			generations have things in common
+		</p>
+		<ul>
+			<li>Don't like to read long texts.</li>
+			<li>Have the span of attention of a bird</li>
+			<li>Skip long paragraphs straight to bullet points</li>
+		</ul>
 	</body>
 </html>
