--- a/exercises/12-my-first-table/index.html
+++ b/exercises/12-my-first-table/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>4Geeks Academy</title>
-</head>
-<body>
-<!-- your code here -->
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<table style="width: 100%; border: 1px solid">
+			<thead>
+				<tr style="height: 40px; background-color: red">
+					<th style="border: 1px solid; text-align: justify">Name</th>
+					<th style="border: 1px solid; text-align: justify">Last Name</th>
+					<th style="border: 1px solid; text-align: justify">Phone Number</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td style="border: 1px solid">Justin</td>
+					<td style="border: 1px solid">Priveto</td>
+					<td style="border: 1px solid">346939829</td>
+				</tr>
+				<tr>
+					<td style="border: 1px solid">Jacob</td>
+					<td style="border: 1px solid">Prieto</td>
+					<td style="border: 1px solid">(345)234.2323</td>
+				</tr>
+				<tr>
+					<td style="border: 1px solid">James</td>
+					<td style="border: 1px solid">Mc Dinzk</td>
+					<td style="border: 1px solid">+(234)455-3434</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
 </html>
