--- a/exercises/13-image-with-text/index.html
+++ b/exercises/13-image-with-text/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>4Geeks Academy</title>
-</head>
-<body>
-<!-- your code here -->
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<table style="border: 0px">
+			<tr>
+				<td>
+					<img
+						src="https://www.history.com/.image/t_share/MTU3OTIzNjU0NDk4NzIzNDc0/
+            the-pictures-that-defined-world-war-iis-featured-photo.jpg"
+						alt="Soldier running"
+						style="height: 150"
+					/>
+				</td>
+				<td>
+					Here is an explanation of the image on the left: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus non nunc
+					at vehicula. Vestibulum pharetra dolor nec dignissim egestas. In magna tellus, maximus ut nibh efficitur, malesuada commodo diam.
+					Ut tempor eleifend lacus. Duis egestas mi ac tincidunt laoreet. Sed faucibus ligula eget quam placerat elementum. Nam nisl elit,
+					maximus quis finibus sagittis, gravida vitae ligula. Suspendisse in dolor sed magna condimentum maximus eu sed diam. Integer
+					bibendum, sem in eleifend pellentesque, neque neque aliquet nunc, sed pretium mauris sem id est.
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
