--- a/exercises/04-list-of-reasons/index.html
+++ b/exercises/04-list-of-reasons/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>This title shows on the bowser tab</title>
-  </head>
-  <body>
-    <!-- your code here -->
-    <p>Hello!</p>
-  </body>
+	<head>
+		<title>This title shows on the bowser tab</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<ol>
+			<li>It's a cool job</li>
+			<li>It pays very well</li>
+			<li>Can work from anywhere</li>
+			<li>Helps develop creativity</li>
+			<li>It's a crucial skill for the future</li>
+			<li>Read number 2</li>
+		</ol>
+	</body>
 </html>
