--- a/exercises/07-anchor-same-page/index.html
+++ b/exercises/07-anchor-same-page/index.html
@@ -4,7 +4,8 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-		<h2>This is the upper side of the website</h2>
+		<a href="#lower">Hi!</a>
+		<h2 id="upper">This is the upper side of the website</h2>
 		<!-- your first anchor here -->
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -33,7 +34,7 @@
 		<p>&nbsp;</p>
 
 		<!-- your second anchor here -->
-		<a>Hello</a>
-		<h2>This is the lower side of the website</h2>
+		<a href="#upper">Hello</a>
+		<h2 id="lower">This is the lower side of the website</h2>
 	</body>
 </html>
