--- a/exercises/08-relative-vs-absolute-path-anchor-tag/index.html
+++ b/exercises/08-relative-vs-absolute-path-anchor-tag/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<a href="/teacher/assignments/24196/edit">Hello</a>
 		<!-- your code below here -->
+		<a href="workspace/html-tutorial-exercises-course/exercises/03-hello-without-head/index.html">To the 3rd exercise</a>
 	</body>
 </html>
