--- a/exercises/10-replicate-html/index.html
+++ b/exercises/10-replicate-html/index.html
@@ -4,6 +4,27 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-        <!-- your code here -->
+		<!-- your code here -->
+		<h1><strong>The Learning Essay</strong></h1>
+		<h2><strong>3 reasons you know you are learning</strong></h2>
+
+		<p>We are going to explain in this paragraph the 3 most common sings that you should look into yourself to recognize you are learning.</p>
+		<ol>
+			<li>You are able to complete the exercises by yourself</li>
+			<li>You understand what the teacher is talking about</li>
+			<li>You are able to have conversations abou the topic</li>
+		</ol>
+
+		<h2><strong>3 reasons you know you love what you are learning</strong></h2>
+
+		<ul>
+			<li>Time passes fast</li>
+			<li>You are anxious to finish this exercise to start the next one</li>
+			<li>Is 12am and you don't want to sleep</li>
+		</ul>
+		<p>
+			If you can't sleep, what better than watching videos of cats?
+			<a href="https://www.youtube.com/results?search_query=cat+videos">click here</a>
+		</p>
 	</body>
 </html>
