--- a/exercises/14-video-tag/index.html
+++ b/exercises/14-video-tag/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-<title>4Geeks Academy</title>
-</head>
-<body style="margin:0;">
-	<!-- your code here -->
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body style="margin: 0">
+		<!-- your code here -->
+		<video width="320" height="240" muted autoplay>
+			<source src="https://assets.breatheco.de/apis/video/why-pair-programming" />
+		</video>
+	</body>
 </html>
